--- a/cliff.toml
+++ b/cliff.toml
@@ -7,7 +7,7 @@
 
 [remote.github]
 owner = "DroidWorksStudio"
-repo = "mLauncher"
+repo = "EasyLauncher"
 
 [changelog]
 # changelog header
@@ -58,7 +58,7 @@ footer = """
 trim = true
 # postprocessors
 postprocessors = [
-    { pattern = '<REPO>', replace = "https://github.com/DroidWorksStudio/mLauncher" }, # replace repository URL
+    { pattern = '<REPO>', replace = "https://github.com/DroidWorksStudio/EasyLauncher" }, # replace repository URL
 ]
 
 [git]
@@ -88,6 +88,7 @@ commit_parsers = [
     { message = "^chore\\(change.*\\)", skip = true },
     { message = "^chore\\(pr\\)", skip = true },
     { message = "^chore\\(pull\\)", skip = true },
+    { message = "^chore\\(language\\)", skip = true },
     { message = "^fixes|^Fixes", skip = true },
     { message = "^feat|^Feat", group = "<!-- 0 -->Implemented Enhancements:" },
     { message = "^fix|^bug|^Fix|^Bug", group = "<!-- 1 -->Bug Fixes:" },
