--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 agp = "8.4.1"
-kotlin = "2.0.0"
+kotlin = "1.8.10"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
-appcompat = "1.6.1"
+appcompat = "1.7.0"
 material = "1.12.0"
 constraintlayout = "2.1.4"
 navigation = "2.7.7"
-lifecycle = "2.8.0"
+lifecycle = "2.8.1"
 dagger = "2.51.1"
 work = "2.9.0"
 recyclerview = "1.3.2"
@@ -17,6 +17,8 @@ preference = "1.2.1"
 room = "2.6.1"
 biometric = "1.2.0-alpha05"
 color-chooser = "0.7.3"
+runtimeAndroid = "1.6.7"
+uiAndroid = "1.6.7"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,6 +48,8 @@ dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", ve
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+androidx-runtime-android = { group = "androidx.compose.runtime", name = "runtime-android", version.ref = "runtimeAndroid" }
+androidx-ui-android = { group = "androidx.compose.ui", name = "ui-android", version.ref = "uiAndroid" }
 
 
 [plugins]
