--- a/.github/workflows/android-pr_ci.yml
+++ b/.github/workflows/android-pr_ci.yml
@@ -37,11 +37,18 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        run: ./gradlew clean && ./gradlew assembleDebug
+        run: ./gradlew clean && ./gradlew assembleAppWithInternetDebug && ./gradlew assembleAppWithoutInternetDebug
 
-      - name: Upload Artifact
+      - name: Upload Artifact - WithInternet
         uses: actions/upload-artifact@v4
         with:
-          name: Signed app bundle
-          path: app/build/outputs/apk/debug/*.apk
+          name: Signed app bundle - WithInternet
+          path: app/build/outputs/apk/withInternet/debug/*.apk
+          retention-days: 3
+
+      - name: Upload Artifact - WithoutInternet
+        uses: actions/upload-artifact@v4
+        with:
+          name: Signed app bundle - WithoutInternet
+          path: app/build/outputs/apk/withoutInternet/debug/*.apk
           retention-days: 3
