--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ dagger = "2.51.1"
 work = "2.9.0"
 recyclerview = "1.3.2"
 preference = "1.2.1"
+retrofit = "2.11.0"
 room = "2.6.1"
 biometric = "1.2.0-alpha05"
 color-chooser = "0.7.3"
@@ -34,6 +35,9 @@ recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version
 preference = { group = "androidx.preference", name = "preference-ktx", version.ref = "preference" }
 biometric-ktx = { group = "androidx.biometric", name = "biometric-ktx", version.ref = "biometric" }
 color-chooser = { group = "net.mm2d.color-chooser", name = "color-chooser", version.ref = "color-chooser" }
+
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 
 # Room Packages
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
