Finally Fixed gradlew
Signed-off-by: HeCodes2Much <wayne6324@gmail.com>

--- a/.github/workflows/android-branch_ci.yml
+++ b/.github/workflows/android-branch_ci.yml
@@ -42,7 +42,7 @@ jobs:
         run: printf "%s" "${{ secrets.WEATHER_PROPERTIES }}" > $GITHUB_WORKSPACE/weather.properties
 
       - name: Build with Gradle
-        run: ./gradlew clean && ./gradlew assembleAppWithInternet && ./gradlew assembleAppWithoutInternet
+        run: ./gradlew clean && ./gradlew assembleWithInternetDebug && ./gradlew assembleWithoutInternetDebug
 
       - name: Upload Artifact - WithInternet
         uses: actions/upload-artifact@v4
