--- a/.github/workflows/android-release_ci-forced.yml
+++ b/.github/workflows/android-release_ci-forced.yml
@@ -58,7 +58,7 @@ jobs:
           path: app/build/outputs/apk/withInternet/release/*.apk
           retention-days: 3
 
-      - name: Sign APK - WithInternet
+      - name: Sign APK - WithoutInternet
         uses: ilharp/sign-android-release@v1
         # ID used to access action output
         id: sign_app_withoutInternet
