--- a/.github/workflows/android-release_ci.yml
+++ b/.github/workflows/android-release_ci.yml
@@ -53,7 +53,7 @@ jobs:
           keyPassword: ${{ secrets.KEY_PASSWORD }}
           buildToolsVersion: 33.0.0
 
-      - name: Release to GitHub
+      - name: Release to GitHub - WithInternet
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GIT_BOT_TOKEN }}
@@ -62,7 +62,7 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
 
-      - name: Sign APK - WithInternet
+      - name: Sign APK - WithoutInternet
         uses: ilharp/sign-android-release@v1
         # ID used to access action output
         id: sign_app_withoutInternet
@@ -74,7 +74,7 @@ jobs:
           keyPassword: ${{ secrets.KEY_PASSWORD }}
           buildToolsVersion: 33.0.0
 
-      - name: Release to GitHub
+      - name: Release to GitHub  - WithoutInternet
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GIT_BOT_TOKEN }}
