--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ appcompat = "1.7.0"
 material = "1.12.0"
 constraintlayout = "2.1.4"
 navigation = "2.7.7"
-lifecycle = "2.8.1"
+lifecycle = "2.8.2"
 dagger = "2.51.1"
 work = "2.9.0"
 recyclerview = "1.3.2"
@@ -18,7 +18,8 @@ retrofit = "2.11.0"
 room = "2.6.1"
 biometric = "1.2.0-alpha05"
 color-chooser = "0.7.3"
-composeAndroid = "1.6.7"
+composeAndroid = "1.6.8"
+acra = "5.11.3"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -53,6 +54,10 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-runtime-android = { group = "androidx.compose.runtime", name = "runtime-android", version.ref = "composeAndroid" }
 androidx-ui-android = { group = "androidx.compose.ui", name = "ui-android", version.ref = "composeAndroid" }
+
+acra-core = { group = "ch.acra", name = "acra-core", version.ref = "acra" }
+acra-dialog = { group = "ch.acra", name = "acra-dialog", version.ref = "acra" }
+acra-mail = { group = "ch.acra", name = "acra-mail", version.ref = "acra" }
 
 
 [plugins]
