--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,37 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ]
+    "labels": [
+        "dependencies",
+    ],
+    "extends": [
+        "config:base",
+    ],
+    "packageRules": [
+        {
+            "groupName": "Kotlin and KSP",
+            "matchPackagePrefixes": [
+                "com.google.devtools.ksp",
+            ],
+            "matchPackagePatterns": [
+                "org.jetbrains.kotlin.*",
+            ]
+        },
+        {
+            "groupName": "AGP",
+            "matchPackagePatterns": [
+                "com.android.*",
+            ]
+        },
+        {
+            "groupName": "androidx.lifecycle",
+            "matchPackagePatterns": [
+                "androidx.lifecycle:*",
+            ]
+        },
+        {
+            "groupName": "Dagger",
+            "matchPackagePrefixes": [
+                "com.google.dagger",
+            ]
+        }
+    ]
 }
