--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -68,6 +68,7 @@ jobs:
   build:
     name: Build, Sign & Release
     runs-on: ubuntu-latest
+    needs: release
     steps:
       - name: Checkout project
         uses: actions/checkout@v4.1.7
