--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -117,7 +117,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GIT_BOT_TOKEN }}
           file: ${{steps.sign_app_withInternet.outputs.signedFile}}
-          asset_name: EasyLauncher-Internet-${{ github.ref_name }}-Signed.apk
+          asset_name: EasyLauncher-Internet-Nightly-Signed.apk
           tag: nightly
           overwrite: true
 
@@ -138,7 +138,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GIT_BOT_TOKEN }}
           file: ${{steps.sign_app_withoutInternet.outputs.signedFile}}
-          asset_name: EasyLauncher-${{ github.ref_name }}-Signed.apk
+          asset_name: EasyLauncher-Nightly-Signed.apk
           tag: nightly
           overwrite: true
 
