Update Github Actions

--- a/.github/workflows/android-release_ci-forced.yml
+++ b/.github/workflows/android-release_ci-forced.yml
@@ -2,77 +2,77 @@
 name: Android Release CI Forced
 
 on:
-  workflow_dispatch:
+    workflow_dispatch:
 
 jobs:
-  build:
-    name: Build, Sign & Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout project
-        uses: actions/checkout@v4.1.7
-        with:
-          token: ${{ secrets.GIT_BOT_TOKEN }}
+    build:
+        name: Build, Sign & Release
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout project
+              uses: actions/checkout@v4.1.7
+              with:
+                  token: ${{ secrets.GIT_BOT_TOKEN }}
 
-      - name: set up JDK 17
-        uses: actions/setup-java@v4.2.1
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
+            - name: set up JDK 17
+              uses: actions/setup-java@v4.2.1
+              with:
+                  java-version: "17"
+                  distribution: "temurin"
+                  cache: gradle
 
-      - uses: actions/cache@v4.0.2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+            - uses: actions/cache@v4.0.2
+              with:
+                  path: |
+                      ~/.gradle/caches
+                      ~/.gradle/wrapper
+                  key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+                  restore-keys: |
+                      ${{ runner.os }}-gradle-
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+            - name: Grant execute permission for gradlew
+              run: chmod +x gradlew
 
-      - name: Get weather.properties from secrets
-        run: printf "%s" "${{ secrets.WEATHER_PROPERTIES }}" > $GITHUB_WORKSPACE/weather.properties
+            - name: Get weather.properties from secrets
+              run: printf "%s" "${{ secrets.WEATHER_PROPERTIES }}" > $GITHUB_WORKSPACE/weather.properties
 
-      - name: Build with Gradle
-        run: ./gradlew clean && ./gradlew assembleWithInternetRelease && ./gradlew assembleWithoutInternetRelease
+            - name: Build with Gradle
+              run: ./gradlew clean && ./gradlew assembleWithInternetRelease && ./gradlew assembleWithoutInternetRelease
 
-      - name: Sign APK - WithInternet
-        uses: ilharp/sign-android-release@v1.0.4
-        # ID used to access action output
-        id: sign_app_withInternet
-        with:
-          releaseDir: app/build/outputs/apk/withInternet/release
-          signingKey: ${{ secrets.SIGNINGKEY_BASE64 }}
-          keyAlias: ${{ secrets.KEY_ALIAS }}
-          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
-          buildToolsVersion: 33.0.0
+            - name: Sign APK - WithInternet
+              uses: ilharp/sign-android-release@v1.0.4
+              # ID used to access action output
+              id: sign_app_withInternet
+              with:
+                  releaseDir: app/build/outputs/apk/withInternet/release
+                  signingKey: ${{ secrets.SIGNINGKEY_BASE64 }}
+                  keyAlias: ${{ secrets.KEY_ALIAS }}
+                  keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+                  keyPassword: ${{ secrets.KEY_PASSWORD }}
+                  buildToolsVersion: 33.0.0
 
-      - name: Upload Artifact - WithInternet
-        uses: actions/upload-artifact@v4.3.4
-        with:
-          name: Signed app bundle - WithInternet
-          path: app/build/outputs/apk/withInternet/release/*.apk
-          retention-days: 3
+            - name: Upload Artifact - WithInternet
+              uses: actions/upload-artifact@v4.3.4
+              with:
+                  name: Signed app bundle - WithInternet
+                  path: app/build/outputs/apk/withInternet/release/*.apk
+                  retention-days: 3
 
-      - name: Sign APK - WithoutInternet
-        uses: ilharp/sign-android-release@v1.0.4
-        # ID used to access action output
-        id: sign_app_withoutInternet
-        with:
-          releaseDir: app/build/outputs/apk/withoutInternet/release
-          signingKey: ${{ secrets.SIGNINGKEY_BASE64 }}
-          keyAlias: ${{ secrets.KEY_ALIAS }}
-          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
-          buildToolsVersion: 33.0.0
+            - name: Sign APK - WithoutInternet
+              uses: ilharp/sign-android-release@v1.0.4
+              # ID used to access action output
+              id: sign_app_withoutInternet
+              with:
+                  releaseDir: app/build/outputs/apk/withoutInternet/release
+                  signingKey: ${{ secrets.SIGNINGKEY_BASE64 }}
+                  keyAlias: ${{ secrets.KEY_ALIAS }}
+                  keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+                  keyPassword: ${{ secrets.KEY_PASSWORD }}
+                  buildToolsVersion: 33.0.0
 
-      - name: Upload Artifact - WithoutInternet
-        uses: actions/upload-artifact@v4.3.4
-        with:
-          name: Signed app bundle - WithoutInternet
-          path: app/build/outputs/apk/withoutInternet/release/*.apk
-          retention-days: 3
+            - name: Upload Artifact - WithoutInternet
+              uses: actions/upload-artifact@v4.3.4
+              with:
+                  name: Signed app bundle - WithoutInternet
+                  path: app/build/outputs/apk/withoutInternet/release/*.apk
+                  retention-days: 3
