--- a/.github/workflows/android-main_ci.yml
+++ b/.github/workflows/android-main_ci.yml
@@ -2,56 +2,56 @@
 name: Android Main Branch CI
 
 on:
-  push:
-    branches:
-      - 'main'
-  workflow_dispatch:
+    push:
+        branches:
+            - "main"
+    workflow_dispatch:
 
 jobs:
-  build:
-    name: Build, Sign & Upload
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout project
-        uses: actions/checkout@v4.1.7
-        with:
-          token: ${{ secrets.GIT_BOT_TOKEN }}
+    build:
+        name: Build, Sign & Upload
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout project
+              uses: actions/checkout@v4.1.7
+              with:
+                  token: ${{ secrets.GIT_BOT_TOKEN }}
 
-      - name: set up JDK 17
-        uses: actions/setup-java@v4.2.1
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
+            - name: set up JDK 17
+              uses: actions/setup-java@v4.2.1
+              with:
+                  java-version: "17"
+                  distribution: "temurin"
+                  cache: gradle
 
-      - uses: actions/cache@v4.0.2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+            - uses: actions/cache@v4.0.2
+              with:
+                  path: |
+                      ~/.gradle/caches
+                      ~/.gradle/wrapper
+                  key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+                  restore-keys: |
+                      ${{ runner.os }}-gradle-
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+            - name: Grant execute permission for gradlew
+              run: chmod +x gradlew
 
-      - name: Get weather.properties from secrets
-        run: printf "%s" "${{ secrets.WEATHER_PROPERTIES }}" > $GITHUB_WORKSPACE/weather.properties
+            - name: Get weather.properties from secrets
+              run: printf "%s" "${{ secrets.WEATHER_PROPERTIES }}" > $GITHUB_WORKSPACE/weather.properties
 
-      - name: Build with Gradle
-        run: ./gradlew clean && ./gradlew assembleWithInternetDebug && ./gradlew assembleWithoutInternetDebug
+            - name: Build with Gradle
+              run: ./gradlew clean && ./gradlew assembleWithInternetDebug && ./gradlew assembleWithoutInternetDebug
 
-      - name: Upload Artifact - WithInternet
-        uses: actions/upload-artifact@v4.3.4
-        with:
-          name: Signed app bundle - WithInternet
-          path: app/build/outputs/apk/withInternet/debug/*.apk
-          retention-days: 3
+            - name: Upload Artifact - WithInternet
+              uses: actions/upload-artifact@v4.3.4
+              with:
+                  name: Signed app bundle - WithInternet
+                  path: app/build/outputs/apk/withInternet/debug/*.apk
+                  retention-days: 3
 
-      - name: Upload Artifact - WithoutInternet
-        uses: actions/upload-artifact@v4.3.4
-        with:
-          name: Signed app bundle - WithoutInternet
-          path: app/build/outputs/apk/withoutInternet/debug/*.apk
-          retention-days: 3
+            - name: Upload Artifact - WithoutInternet
+              uses: actions/upload-artifact@v4.3.4
+              with:
+                  name: Signed app bundle - WithoutInternet
+                  path: app/build/outputs/apk/withoutInternet/debug/*.apk
+                  retention-days: 3
