Housekeeping: Making the issue types a bit better.
Signed-off-by: HeCodes2Much <wayne6324@gmail.com>

--- a/.github/ISSUE_TEMPLATE/ENHANCEMENT.yml
+++ b/.github/ISSUE_TEMPLATE/ENHANCEMENT.yml
@@ -54,3 +54,10 @@ body:
           required: true
         - label: "I accept that if I fail to follow the rules listed above that i will be blocked from interactions with this project."
           required: true
+
+  - type: input
+    id: donation-name
+    attributes:
+      label: Donation Name
+      description: "If you have optionally donated please put your username below?"
+      placeholder: "I Don't Donate"
