--- a/.github/ISSUE_TEMPLATE/CRASH_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/CRASH_REPORT.yml
@@ -1,8 +1,8 @@
 name: Crash Report
 description: Create a report with a generated crash log attached (if possible) to help mLauncher improve
-labels: ['Type: Crash Report']
+labels: [ 'Type: Crash Report' ]
 title: '[Crash Report] add text here'
-assignees: ['HeCodes2Much']
+assignees: [ 'HeCodes2Much' ]
 body:
   - type: markdown
     attributes:
@@ -25,21 +25,30 @@ body:
           required: false
 
   - type: input
+    id: phone-make-model
+    attributes:
+      label: Phone Make $ model
+      description: "What make and model is your phone?"
+      placeholder: "Google - Pixel 7"
+    validations:
+      required: true
+
+  - type: input
     id: app-version
     attributes:
-     label: App version
-     description: "In which version did you encounter the crash?"
-     placeholder: "xx.xx - Can be seen in the app from the 'Settings' section"
+      label: App version
+      description: "In which version did you encounter the crash?"
+      placeholder: "xx.xx - Can be seen in the app from the 'Settings' section"
     validations:
       required: true
 
   - type: input
     id: device-os-info
     attributes:
-     label: Android version
-     description: |
-      With what operating system (+ version) did you encounter the crash?
-     placeholder: "Example: Android 10"
+      label: Android version
+      description: |
+        With what operating system (+ version) did you encounter the crash?
+      placeholder: "Example: Android 10"
     validations:
       required: true
 
@@ -126,3 +135,10 @@ body:
           required: true
         - label: "I accept that if I fail to follow the rules listed above that i will be blocked from interactions with this project."
           required: true
+
+  - type: input
+    id: donation-name
+    attributes:
+      label: Donation Name
+      description: "If you have optionally donated please put your username below?"
+      placeholder: "I Don't Donate"
