--- a/.github/workflows/android-release_ci.yml
+++ b/.github/workflows/android-release_ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout project
         uses: actions/checkout@v4.1.7
         with:
-          token: ${{ secrets.GIT_BOT_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: set up JDK 17
         uses: actions/setup-java@v4.2.2
@@ -56,7 +56,7 @@ jobs:
       - name: Release to GitHub - WithInternet
         uses: svenstaro/upload-release-action@2.9.0
         with:
-          repo_token: ${{ secrets.GIT_BOT_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{steps.sign_app_withInternet.outputs.signedFile}}
           asset_name: EasyLauncher-Internet-${{ github.ref_name }}-Signed.apk
           tag: ${{ github.ref }}
@@ -77,7 +77,7 @@ jobs:
       - name: Release to GitHub  - WithoutInternet
         uses: svenstaro/upload-release-action@2.9.0
         with:
-          repo_token: ${{ secrets.GIT_BOT_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{steps.sign_app_withoutInternet.outputs.signedFile}}
           asset_name: EasyLauncher-${{ github.ref_name }}-Signed.apk
           tag: ${{ github.ref }}
