--- a/.github/workflows/thank-you-issue_ci.yml
+++ b/.github/workflows/thank-you-issue_ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/github-script@v7.0.1
         with:
-          github-token: ${{ secrets.GIT_BOT_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
