--- a/cliff.toml
+++ b/cliff.toml
@@ -79,11 +79,12 @@ commit_preprocessors = [
     { pattern = "Signed-off-by: The-Repo-Club <wayne6324@gmail.com>", replace = ""}
     # Check spelling of the commit with https://github.com/crate-ci/typos
     # If the spelling is incorrect, it will be automatically fixed.
-    # { pattern = '.*', replace_command = 'typos --write-changes -' },
+    { pattern = '.*', replace_command = 'typos --write-changes -' },
 ]
 # regex for parsing and grouping commits
 commit_parsers = [
     { message = "^chore\\(release\\): prepare for", skip = true },
+    { message = "^chore\\(deps.*\\)", skip = true },
     { message = "^chore\\(change.*\\)", skip = true },
     { message = "^chore\\(pr\\)", skip = true },
     { message = "^chore\\(pull\\)", skip = true },
