--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -42,7 +42,7 @@ jobs:
               git config --global user.name ${{ secrets.GIT_NAME }}
               git config --global user.email ${{ secrets.GIT_EMAIL }}
           
-              git add -A
+              git add CHANGELOG.md
               git commit -m "chore(changelog): Update CHANGELOG.md"
               git push origin main
             else
